# stingray

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  compose.yml  config.yml  crontab  pyproject.toml
.github/workflows/: ci.yml
backend/: app.py  cache.py  db.py  feeds.py  fetcher.py  healthcheck.py  lang.py  llm.py  log.py  main.py  migrate_sqlite_to_pg.py  models.py  opml.py  repo.py  schemas.py  scraper.py  seed.py  selector_inference.py  summarizer.py  url_cleaner.py
backend/tests/: conftest.py  test_app_config_wiring.py  test_articles_endpoint.py  test_cache.py  test_config.py  test_extraction_rules_validate.py  test_feeds_probe.py  test_feeds_title_normalize.py  test_feeds_url_cleanup.py  test_fetcher_needs_llm.py  test_filters.py  test_healthcheck.py  test_infer_endpoint.py  test_lang.py  test_llm_sanitize.py  test_manual_fetch_health.py  test_opml.py  test_repo_articles.py  test_repo_folders.py  test_repo_pending.py  test_repo_schedule.py  test_repo_stats_summary.py  test_scraper_url_cleanup.py  test_selector_inference.py  test_url_cleaner.py
frontend/: biome.json  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  prismjs.d.ts  test-setup.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: ArticleCard.test.tsx  ArticleCard.tsx  ArticleList.tsx  CaughtUpIndicator.tsx  Header.tsx  (+8 more)
src/: cache.py  feeds.py  main.py  models.py  renderer.py  summarizer.py
src/templates/: report.html.j2
(+44 files in other folders)
