[project]
name = "news-aggregator"
version = "0.2.0"
description = "RSS reader web app with Japanese translation and summarization"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0",
  "httpx>=0.28",
  "pyyaml>=6.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "python-multipart>=0.0.18",
  "pydantic>=2.10",
  "defusedxml>=0.7",
]

[dependency-groups]
dev = [
  "pyright>=1.1",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
pythonPlatform = "All"
exclude = [
  "backend/feeds.py",
  "backend/summarizer.py",
  "backend/log.py",
]
