[project]
name = "news-aggregator"
version = "0.2.0"
description = "RSS reader web app with Japanese translation and summarization"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0",
  "httpx>=0.28",
  "pyyaml>=6.0",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "python-multipart>=0.0.18",
  "pydantic>=2.10",
  "defusedxml>=0.7",
  "beautifulsoup4>=4.12",
  "psycopg[binary,pool]>=3.2",
]

[dependency-groups]
dev = [
  "pyright>=1.1",
  "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-q"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
pythonPlatform = "All"
include = ["backend"]
extraPaths = ["backend"]
exclude = [
  "**/.venv",
  "**/__pycache__",
  "backend/feeds.py",
  "backend/summarizer.py",
  "backend/log.py",
  "backend/scraper.py",
  "backend/tests",
]
